fix: nav words overlapping

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ nav {
   flex: 1;
   background-color: #f1f1f1;
   padding: 20px;
+  word-break: break-word;
 }
 
 nav ul {
